--- a/front-devmaterial/src/app/pages/demandes-listing/demandes-listing.component.html
+++ b/front-devmaterial/src/app/pages/demandes-listing/demandes-listing.component.html
@@ -1,26 +1,26 @@
-<!-- Tableau des demandes (Bootstrap) -->
 <div class="container my-3">
-	<h3>Liste des demandes</h3>
-	<div class="table-responsive">
-		<table class="table table-striped table-bordered">
-			<thead class="table-light">
-				<tr>
-					<th scope="col">ID</th>
-					<th scope="col">Numéro</th>
-					<th scope="col">Type</th>
-					<th scope="col">Date</th>
-				</tr>
-			</thead>
-			<tbody>
-				<!-- Ligne de test -->
-				<tr>
-					<th scope="row">1</th>
-					<td>DEM-0001</td>
-					<td>Test</td>
-					<td>2025-10-15</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+  <h3>Liste des demandes</h3>
+  <div class="table-responsive">
+    <table class="table table-striped table-bordered">
+      <thead class="table-light">
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Numéro</th>
+          <th scope="col">Type</th>
+          <th scope="col">Date</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let c of commandes">
+          <th scope="row">{{ c.id }}</th>
+          <td>{{ c.number }}</td>
+          <td>{{ c.type }}</td>
+          <td>{{ c.dateDemande | date:'yyyy-MM-dd' }}</td>
+        </tr>
+        <tr *ngIf="commandes.length === 0">
+          <td colspan="4" class="text-center text-muted">Aucune commande trouvée</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
-
