--- a/front-wagonlits/src/app/pages/demandes-listing/demandes-listing.component.html
+++ b/front-wagonlits/src/app/pages/demandes-listing/demandes-listing.component.html
@@ -1,5 +1,18 @@
 <div class="container my-3">
-  <h3>Liste des demandes de Wagon Lits</h3>
+  <div class="d-flex align-items-center justify-content-between">
+    <h3>Liste des demandes de Wagon Lits</h3>
+
+    <button class="btn btn-primary"
+            (click)="triggerWebhook()"
+            [disabled]="isTriggering">
+      {{ isTriggering ? 'Envoi...' : 'Trigger event (webhook)' }}
+    </button>
+  </div>
+
+  <div *ngIf="triggerResult" class="alert alert-secondary my-3" style="white-space: pre-wrap;">
+    {{ triggerResult | json }}
+  </div>
+
   <div class="table-responsive">
     <table class="table table-striped table-bordered">
       <thead class="table-light">
