--- a/front-wagonlits/src/app/pages/demandes-add/demandes-add.component.html
+++ b/front-wagonlits/src/app/pages/demandes-add/demandes-add.component.html
@@ -3,13 +3,13 @@
 
   <form (ngSubmit)="submit()" #form="ngForm">
     <div class="mb-3">
-      <label for="panne" class="form-label">ID panne (optionnel)</label>
-      <input id="panne" name="panne_id" class="form-control" [(ngModel)]="panne_id" />
+  <label for="panne" class="form-label">ID panne (optionnel)</label>
+  <input id="panne" name="fault_id" class="form-control" [(ngModel)]="panne_id" />
     </div>
 
     <div class="mb-3">
-      <label for="type" class="form-label">Type de panne *</label>
-      <input id="type" name="type_panne" class="form-control" [(ngModel)]="type_panne" required />
+  <label for="type" class="form-label">Type de panne *</label>
+  <input id="type" name="fault_type" class="form-control" [(ngModel)]="type_panne" required />
     </div>
 
     <button class="btn btn-primary" type="submit" [disabled]="submitting">Créer</button>
