[WEBHOOK] Add db

--- a/front-devmaterial/src/app/app.component.html
+++ b/front-devmaterial/src/app/app.component.html
@@ -1,17 +1,33 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark shadow-sm" style="background-color: #0d47a1;">
   <div class="container">
-    <a class="navbar-brand" routerLink="/">MonProjet</a>
-    <ul class="navbar-nav me-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/">Accueil</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/about">À propos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/demandes">Demandes</a>
-      </li>
-    </ul>
+    <a class="navbar-brand fw-bold" routerLink="/">
+      <i class="bi bi-train-front me-2"></i>DevMaterial
+    </a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+            <i class="bi bi-house-door me-1"></i>Accueil
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/about" routerLinkActive="active">
+            <i class="bi bi-info-circle me-1"></i>À propos
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/demandes" routerLinkActive="active">
+            <i class="bi bi-envelope-open me-1"></i>Demandes
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 
