--- a/front-wagonlits/src/app/pages/demandes-listing/demandes-listing.component.html
+++ b/front-wagonlits/src/app/pages/demandes-listing/demandes-listing.component.html
@@ -3,6 +3,10 @@
 
   <a routerLink="/demandes/add" class="btn btn-primary mb-3">Ajouter une demande</a>
 
+  <button class="btn btn-secondary mb-3 ms-2" (click)="triggerWebhook()">
+    triggerWebhook
+  </button>
+
   <div class="table-responsive">
     <table class="table table-striped table-bordered">
       <thead class="table-light">
