demande edit in progress + xml test for front

--- a/front-devmaterial/src/app/pages/demandes-edit/demandes-edit.component.html
+++ b/front-devmaterial/src/app/pages/demandes-edit/demandes-edit.component.html
@@ -2,6 +2,7 @@
   <div class="d-flex align-items-center justify-content-between flex-wrap gap-2 mb-3 tabs-card">
     <div class="d-flex align-items-center gap-3 flex-wrap">
       <div class="client-info d-flex flex-column me-3 text-start">
+        <div><strong>Client :</strong> <span class="ms-1">{{ demande?.client_name || 'N/A' }}</span></div>
         <div><strong>Demande N°</strong> <span class="ms-1">{{ numDemande || 'N/A' }}</span></div>
       </div>
 
