--- a/front-wagonlits/src/app/app.component.html
+++ b/front-wagonlits/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+<nav class="navbar navbar-expand-lg navbar-dark shadow-sm"  style="background-color: #a32c2c;">
   <div class="container">
     <!-- Logo / Titre -->
     <a class="navbar-brand fw-bold" routerLink="/">
