--- a/front-wagonlits/src/app/pages/demandes-edit/demandes-edit.component.html
+++ b/front-wagonlits/src/app/pages/demandes-edit/demandes-edit.component.html
@@ -192,6 +192,8 @@
   </div>
 </div>
 
-<div class="d-flex justify-content-end mt-4">
+<div class="d-flex justify-content-end mt-4 gap-2">
+  <a class="btn btn-secondary" routerLink="/demandes">Voir la liste</a>
+  <a class="btn btn-outline-primary" routerLink="/demandes/add">Ajouter une demande</a>
   <button class="btn btn-success" (click)="fermerDemande()">Fermer la demande</button>
 </div>
